# crazyflie-client-tauri

./: README.md  package-lock.json  package.json
.github/workflows/: build-main.yml  build-master.yml
src/: App copy.tsx  App.css  App.tsx  backend.tsx  global_context.tsx  main.tsx  store.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: connection_modal.tsx  console_tab.tsx
src/interface/: connected_event.ts  console_event.ts  scan_response.ts
