[package]
name = "crazyflie-client-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = "7.1.1"

#crazyflie-link = {path="../../crazyflie-link-rs/crazyflie-link"}
#crazyflie-lib = {path="../../crazyflie-lib-rs"}

crazyflie-link = { version="0.2.1", default-features = false }
crazyflie-lib = {git="https://github.com/ataffanel/crazyflie-lib-rs", branch="main"}

async_executors = { version="0.4.2", features= ["timer", "async_std"] }
futures-util = "0.3"
futures = "0.3"
async-stream = "0.3.1"
flume = "0.10.5"
async-trait = "0.1.50"
num_enum = "0.5.1"
half = "1.7.1"
async-broadcast = "0.3.4"

async-std = { version = "1.9.0", features = ["attributes"] }

env_logger = "0.9.0"
anyhow = "1.0.80"
tokio = { version = "1.36.0", features = ["full"] }
tauri-plugin-shell = "2.0.0-rc"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
